--- a/Pipfile
+++ b/Pipfile
@@ -14,6 +14,8 @@ drf-yasg = "*"
 python-dotenv = "*"
 gunicorn = "*"
 django-resized = "*"
+celery = "*"
+django-celery-beat = "*"
 
 [dev-packages]
 
